<resources>
    <!-- TODO organize these into logical groupings -->

    <string name="app_name">Bisq</string>

    <string name="notification_channel_name">Notifications</string>
    <string name="notification_channel_description">All notifications</string>

    <string name="theme">Theme</string>

    <string name="theme_preferences_key">theme_preferences_key</string>
    <string name="reset_pairing_preferences_key">reset_pairing_preferences_key</string>
    <string name="scan_pairing_token_preferences_key">scan_pairing_token_preferences_key</string>
    <string name="about_bisq_preferences_key">about_bisq_preferences_key</string>
    <string name="about_app_preferences_key">about_app_preferences_key</string>
    <string name="debug_preferences_key">debug_preferences_key</string>
    <string name="version_preferences_key">version_preferences_key</string>

    <string name="dark_theme_preference_value">0</string>
    <string name="light_theme_preference_value">1</string>
    <string name="system_theme_preference_value">2</string>

    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="system_theme">System default</string>

    <string name="dark_theme_description">Dark mode</string>
    <string name="light_theme_description">Light mode</string>
    <string name="system_theme_description">System default</string>

    <string name="default_notification_channel_id">bisq.notification</string>
    <string name="default_notification_group_key">bisq.notification.default</string>
    <string name="notification_receiver_action">bisq.notification</string>
    <string name="intent_receiver_action">bisq.intent</string>

    <string name="you_have_received_notification">You have received a Bisq notification</string>

    <string name="version">Version %1$s</string>

    <string name="button_pair">Pair</string>
    <string name="button_simulate_pairing">Simulate pairing</string>
    <string name="button_no_webcam">No webcam?</string>
    <string name="button_debug">Debug</string>
    <string name="button_learn_more">Learn more</string>
    <string name="button_reset_pair_again">Reset and pair again</string>
    <string name="button_pairing_complete">Proceed</string>
    <string name="button_request_permission">Enable Notifications</string>

    <string name="clear_log">Clear Log</string>
    <string name="send_log">Send Log</string>

    <string name="button_add_example_notifications">Add example notifications</string>
    <string name="button_mark_as_read">Mark all as read</string>
    <string name="button_delete_notifications">Delete all notifications</string>
    <string name="button_delete_notification">Delete</string>

    <string name="reset_pairing">Reset Pairing</string>
    <string name="reset_and_pair_again">Reset and pair the application again</string>
    <string name="about_this_app">About this application</string>
    <string name="debug">Debug</string>
    <string name="about_bisq">About Bisq</string>

    <string name="icon_unknown">\uf059</string>
    <string name="icon_trade">\uf362</string>
    <string name="icon_offer">\uf2b5</string>
    <string name="icon_dispute">\uf0e3</string>
    <string name="icon_price">\uf201</string>
    <string name="icon_market">\uf24e</string>

    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="try_again">Try again</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success</string>
    <string name="qr_code">QR Code</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="unknown">Unknown</string>
    <string name="confirm">Confirm</string>
    <string name="skip">Skip</string>

    <string name="welcome_text">Receive important notifications from your Bisq desktop application, such as trade updates and offer alerts.\n\nYou must first pair this app to your Bisq desktop application…</string>
    <string name="scan_pairing_instructions_text">In order to pair this app, you need to scan the above QR code, which contains your pairing token, from your Bisq desktop application using a webcam.\n\nIn Bisq, select Account -&gt; Notifications and press "Scan QR code".</string>
    <string name="send_pairing_token">Send Pairing Token</string>
    <string name="scan_pairing_token">Scan Pairing Token</string>
    <string name="send_pairing_subject">Bisq pairing token</string>
    <string name="send_log_subject">Bisq app log</string>
    <string name="send_pairing_instructions_text">If you are unable to scan the QR code, you can instead send the pairing token to yourself (e.g. via email).\n\nMake sure to keep the pairing token private. It contains your encryption key which is used by the Bisq desktop application to encrypt notifications and a token from Google that identifies this device.\n\nOnce you have the token, open the Bisq desktop application and go to Account -&gt; Notifications. Then paste/enter the token into the pairing token field. Upon entering the token, this app should then be paired and progress to the next screen automatically.</string>
    <string name="pairing_success_text">Success!\n\nThis app is now paired to your Bisq desktop application.</string>
    <string name="pairing_request_notification_permission_text">Get notified!\n\nDon\'t miss an update by allowing the app to send you notifications.</string>

    <string name="google_play_services_unavailable">Google Play services are unavailable. This app will not work without it.</string>
    <string name="cannot_retrieve_fcm_token">Unable to retrieve FCM token. Ensure network access is not blocked and an internet connection is available before trying again.</string>
    <string name="cannot_generate_qr_code">Failed to generate QR code</string>

    <string name="qr_placeholder_text">-- QR Code --</string>

    <string name="load_web_page_confirmation">The following web page will be loaded. Do you want to proceed?\n\n%1$s</string>
    <string name="cannot_launch_browser">Unable to launch web browser</string>

    <string name="register_again_confirmation">Are you sure you want to reset and pair again? This will delete all notifications.</string>
    <string name="delete_all_notifications_confirmation">Are you sure you want to delete all notifications?</string>

    <string name="key">Key: %1$s</string>
    <string name="device_status">Device status:</string>
    <string name="device_token">Device token:</string>
    <string name="pairing_token">Pairing token:</string>

    <string name="lorem_ipsim">Lorem ipsum odor amet, consectetuer adipiscing elit. Luctus fermentum magnis mollis ad neque lobortis. Phasellus lorem nascetur mi adipiscing, dictum bibendum ac. Lobortis dapibus vel fermentum iaculis habitant lacus mus diam. Platea dis ullamcorper magna varius nascetur vestibulum orci a et. Nibh class senectus sociosqu turpis inceptos accumsan amet tincidunt feugiat? Curae et sodales duis hendrerit libero. Rutrum et sodales viverra; cursus tempus bibendum curae vivamus. Congue nunc suscipit penatibus laoreet; at duis? Mus posuere ultrices viverra duis sit congue varius at. Malesuada primis eget turpis senectus felis justo. Nibh pellentesque primis at ligula pretium eleifend tempor diam commodo. Enim enim pharetra hendrerit ultricies fermentum nulla. Mus orci aliquam metus; laoreet tempor adipiscing. Aliquam interdum lectus nisl interdum conubia cras. Aenean vitae mauris nibh magnis iaculis malesuada semper hac. Lectus mollis per malesuada mi non. Elit leo dignissim tellus tempor euismod tristique leo iaculis.</string>

    <string name="debug_warning">The information shown here is intended to be used for troubleshooting purposes. It may contain sensitive information that should not be freely shared with others.</string>

    <string name="event_occurred_at">Event occurred: %1$s</string>
    <string name="event_received_at">Event received: %1$s</string>

    <string name="pairing_erased">App has been unpaired remotely</string>
    <string name="pairing_erased_new_token">App has been unpaired as a result of receiving a new FCM token</string>

    <string name="failed_to_process_notification">Failed to process notification</string>

    <string name="permission_explanation">Allow Bisq to send you notifications?</string>

    <string name="show_debug_logs">Show debug logs</string>
</resources>
