<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/debug_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="bisq.android.ui.debug.DebugActivity">

    <!-- This scrim will sit under the status bar -->
    <View
        android:id="@+id/debug_status_bar_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primary"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Container for all content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/debug_content_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/debug_status_bar_background">

        <TextView
            android:id="@+id/debug_warning"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/debug_warning"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/device_status_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/device_status"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/debug_warning" />

        <TextView
            android:id="@+id/device_status_value"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/device_status_label"
            app:layout_constraintTop_toBottomOf="@+id/debug_warning" />

        <TextView
            android:id="@+id/show_debug_log_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/show_debug_logs"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/device_status_label" />

        <Switch
            android:id="@+id/show_debug_log_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/show_debug_log_label"
            app:layout_constraintTop_toBottomOf="@+id/device_status_label" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/send_log_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_debug_log_switch">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/log_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/lorem_ipsim"
                    android:textAlignment="textStart"
                    android:textSize="14sp" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/clear_log_button"
            style="@style/CautionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:enabled="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/clear_log"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/send_log_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/send_log_button"
            style="@style/PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:enabled="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/send_log"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/clear_log_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
